--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1012,7 +1012,7 @@
 						<TextBlock
 							Grid.Row="2"
 							Grid.Column="1"
-							Margin="4 3 0 3"
+							Margin="4 0 0 0"
 							VerticalAlignment="Center"
 							Text="{Binding AudioSummary}"
 							TextTrimming="CharacterEllipsis" />
@@ -1401,15 +1401,15 @@
 
 						<!--  Chapters header  -->
 						<Grid
+							Height="30"
 							Grid.Row="6"
 							Grid.Column="0"
 							Visibility="{Binding ShowChapterMarkerUI,
 							                     Converter={StaticResource VisibilityConverter}}">
 							<TextBlock
-								Height="15.96"
-								Margin="20 0 0 0"
+								Margin="16 0 0 0"
 								Padding="0 0 5 0"
-								HorizontalAlignment="Right"
+								HorizontalAlignment="Left"
 								VerticalAlignment="Center"
 								Style="{StaticResource EmphasizedTitle}"
 								Text="{x:Static res:MainRes.ChapterMarkersLabel}" />
@@ -1421,12 +1421,10 @@
 							Visibility="{Binding ShowChapterMarkerUI,
 							                     Converter={StaticResource VisibilityConverter}}">
 							<TextBlock
-								Height="15.96"
 								MinWidth="48"
-								Margin="7 0 0 0"
+								Margin="4 0 0 0"
 								HorizontalAlignment="Right"
 								VerticalAlignment="Center"
-								Style="{StaticResource DescriptiveText}"
 								Text="{Binding ChapterMarkersSummary}" />
 							<Button
 								Height="23"
