Refactored preview generation into PreviewImageService to prepare for separate control on main UI.

--- a/VidCoder/View/Preview/PreviewCreationControls.xaml
+++ b/VidCoder/View/Preview/PreviewCreationControls.xaml
@@ -22,7 +22,7 @@
 			Height="24"
 			HorizontalAlignment="Stretch"
 			IsEnabled="{Binding SeekBarEnabled}"
-			NumSlots="{Binding PreviewCount,
+			NumSlots="{Binding PreviewImageService.PreviewCount,
 			                   Mode=OneWay}"
 			Slot="{Binding SelectedPreview,
 			               Mode=TwoWay}" />
