Moved more logic to PreviewImageServiceClient to prep for adding to main window.

--- a/VidCoder/View/Preview/PreviewCreationControls.xaml
+++ b/VidCoder/View/Preview/PreviewCreationControls.xaml
@@ -24,7 +24,7 @@
 			IsEnabled="{Binding SeekBarEnabled}"
 			NumSlots="{Binding PreviewImageService.PreviewCount,
 			                   Mode=OneWay}"
-			Slot="{Binding SelectedPreview,
+			Slot="{Binding PreviewImageServiceClient.PreviewIndex,
 			               Mode=TwoWay}" />
 		<WrapPanel
 			Margin="4"
